--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@VAL_Jonygel/pwa-test-12",
+  "name": "@Jonygel/pwa-test-12",
   "version": "0.1.26",
   "repository": "https://github.com/Jonygel/loro-testnet-example-pwa",
   "scripts": {
